--- a/src/components/home/EventItem.css
+++ b/src/components/home/EventItem.css
@@ -1,5 +1,14 @@
 .eventWrapper {
     height: 300px;
-    width: 200px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.eventWrapper .eventItem {
     background-color: darkslategray;
+    display: flex;
+    height: 300px;
+    width: 200px;
+    cursor: pointer;
 }
