--- a/src/components/home/EventItem.css
+++ b/src/components/home/EventItem.css
@@ -11,4 +11,13 @@
     height: 300px;
     width: 200px;
     cursor: pointer;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    transition: all .2s;
 }
+
+.eventWrapper .eventItem:hover {
+    transform: scale(1.2) translateY(10px);
+    transition: all .2s;
+}
+
