--- a/src/components/home/EventItem.css
+++ b/src/components/home/EventItem.css
@@ -14,7 +14,6 @@
     transition: all .2s;
 }
 
-.eventWrapper .eventItem:hover .mask,
 .eventWrapper .eventItem:hover {
     transform: scale(1.2) translateY(10px);
     transition: all .2s;
@@ -42,3 +41,23 @@
     transition: all .2s;
 }
 
+.eventWrapper .eventItem .eventInfo .eventName {
+    font-size: 30px;
+}
+
+.eventWrapper .eventItem .eventInfo .eventOwner {
+    font-size: 24px;
+}
+
+.eventWrapper .eventItem .eventInfo .eventDescription {
+    border: 1px solid white;
+    padding: 10px;
+    border-radius: 5px;
+    opacity: 0;
+    transition: all .2s;
+}
+
+.eventWrapper .eventItem:hover .eventInfo .eventDescription {
+    opacity: 1;
+    transition: all .2s;
+}
