--- a/src/views/DipEvento.css
+++ b/src/views/DipEvento.css
@@ -1,19 +1,30 @@
+.DipWrapper {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
 .DipEvento {
     display: flex;
     flex-direction: row;
-    margin-top: 40px;
     margin-right: 20px;
+    flex: 1;
+    height: 100%;
 }
 
 .DipEvento .leftPanel {
     display: flex;
     width: 300px;
+    background-image: url("/img/beer.jpg");
+    background-size: cover;
+    background-position: center;
 }
 
 .DipEvento .rightPanel {
     display: flex;
     flex: 1;
     flex-direction: column;
+    margin-left: 20px;
 }
 
 .DipEvento .rightPanel .eventInnerWrapper {
@@ -28,7 +39,6 @@
 .DipEvento .rightPanel .eventHeader {
     display: flex;
     flex-direction: row;
-    flex: 1;
     border-bottom: solid 1px white;
     font-size: 24px;
     font-weight: 600;
@@ -44,7 +54,7 @@
 
 .DipEvento .rightPanel .eventInfo {
     border-bottom: solid 1px white;
-    height: 300px;
+    height: 580px;
     display: flex;
     flex-direction: column;
 }
@@ -68,10 +78,18 @@
     margin-top: 10px;
 }
 
+.DipEvento .rightPanel .eventGuests {
+    border-left: 1px solid white;
+    height: 100%;
+    min-width: 250px;
+    overflow-y: scroll;
+}
+
 .DipEvento .rightPanel .eventInnerWrapper .guestInfo {
     display: flex;
     flex-direction: column;
     border-left: solid 1px white;
+    min-width: 180px;
     height: 100%;
 }
 
@@ -91,9 +109,22 @@
     font-weight: 500;
     display: flex;
     flex-direction: column;
+    align-items: center;
+}
+
+.DipEvento .rightPanel .eventListsWrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
 }
 
 .DipEvento .rightPanel .eventListsWrapper .guestList {
     display: flex;
     flex-direction: column;
+}
+
+.listWrapper {
+    max-width: 460px;
+    height: 100%;
+    overflow-y: scroll;
 }
