--- a/src/views/Payment.css
+++ b/src/views/Payment.css
@@ -1,7 +1,14 @@
+.paymentRoot {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+}
+
 .paymentWrapper {
     display: flex;
     flex-direction: column;
-    width: 900px;
+    margin-top: 40px;
 }
 
 .paymentWrapper .accountBalance {
@@ -14,10 +21,26 @@
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
+    padding: 10px;
 }
 
 .paymentWrapper .paymentTypes img {
     height: 200px;
 }
 
+.paymentWrapper .paymentTypes .loan{
+    display: flex;
+    flex: 1;
+}
 
+.paymentWrapper .paymentTypes .payment {
+    margin: 10px;
+    cursor: pointer;
+    opacity: .8;
+    transition: all .2s;
+}
+
+.paymentWrapper .paymentTypes .payment:hover {
+    opacity: 1;
+    transition: all .2s;
+}
