--- a/src/views/DipEvento.css
+++ b/src/views/DipEvento.css
@@ -12,13 +12,26 @@
     height: 100%;
 }
 
-.DipEvento .leftPanel {
-    display: flex;
-    width: 300px;
-    background-image: url("/img/beer.jpg");
-    background-size: cover;
-    background-position: center;
+@media only screen and (min-width: 1024px) {
+    .DipEvento .leftPanel {
+        display: flex;
+        width: 300px;
+        background-image: url("/img/beer.jpg");
+        background-size: cover;
+        background-position: center;
+    }
 }
+
+@media only screen and (max-width: 1024px) {
+    .DipEvento .leftPanel {
+        width: 300px;
+        background-image: url("/img/beer.jpg");
+        background-size: cover;
+        background-position: center;
+        display: none;
+    }
+}
+
 
 .DipEvento .rightPanel {
     display: flex;
@@ -59,12 +72,20 @@
     flex-direction: column;
 }
 
-.DipEvento .rightPanel .eventInnerWrapper .ownerInfo {
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-    margin-right: 10px;
-    height: 100%;
+@media only screen and (max-width: 500px) {
+    .DipEvento .rightPanel .eventInnerWrapper .ownerInfo {
+        display: none !important;
+    }
+}
+
+@media only screen and (min-width: 500px) {
+    .DipEvento .rightPanel .eventInnerWrapper .ownerInfo {
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+        margin-right: 10px;
+        height: 100%;
+    }
 }
 
 .DipEvento .rightPanel .eventInnerWrapper .ownerInfo .eventOwner{
@@ -85,12 +106,26 @@
     overflow-y: scroll;
 }
 
+@media only screen and (min-width: 980px) {
 .DipEvento .rightPanel .eventInnerWrapper .guestInfo {
-    display: flex;
-    flex-direction: column;
-    border-left: solid 1px white;
-    min-width: 180px;
-    height: 100%;
+        display: flex;
+        flex-direction: column;
+        border-left: solid 1px white;
+        min-width: 180px;
+        height: 100%;
+    }
+}
+
+@media only screen and (max-width: 980px) {
+    .DipEvento .rightPanel .eventInnerWrapper .guestInfo {
+        display: flex;
+        flex-direction: column;
+        border-left: solid 1px white;
+        min-width: 180px;
+        height: 100%;
+        overflow-y: scroll;
+        overflow-x: hidden;
+    }
 }
 
 .DipEvento .rightPanel .eventInnerWrapper .guestInfo span {
@@ -112,11 +147,12 @@
     align-items: center;
 }
 
-.DipEvento .rightPanel .eventListsWrapper {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-}
+    .DipEvento .rightPanel .eventListsWrapper {
+        margin-top: 20px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+    }
 
 .DipEvento .rightPanel .eventListsWrapper .guestList {
     display: flex;
@@ -127,4 +163,29 @@
     max-width: 460px;
     height: 100%;
     overflow-y: scroll;
+}
+
+.DipEvento .rightPanel .eventInnerWrapper .guestInfo::-webkit-scrollbar,
+.DipEvento .rightPanel .eventGuests::-webkit-scrollbar,
+.listWrapper::-webkit-scrollbar {
+    width: 12px;
+    background-color: black;
+    left: -5px;
+}
+.DipEvento .rightPanel .eventInnerWrapper .guestInfo::-webkit-scrollbar-thumb,
+.DipEvento .rightPanel .eventGuests::-webkit-scrollbar-thumb,
+.listWrapper::-webkit-scrollbar-thumb {
+    background: grey;
+    border-radius: 10px;
+}
+.DipEvento .rightPanel .eventInnerWrapper .guestInfo::-webkit-scrollbar-thumb:hover,
+.DipEvento .rightPanel .eventGuests::-webkit-scrollbar-thumb:hover,
+.listWrapper::-webkit-scrollbar-thumb:hover {
+    background: #666565;
+}
+.DipEvento .rightPanel .eventInnerWrapper .guestInfo::-webkit-scrollbar-track,
+.DipEvento .rightPanel .eventGuests::-webkit-scrollbar-track,
+.listWrapper::-webkit-scrollbar-track {
+    background: black;
+    padding-right: 5px;
 }
