--- a/src/views/Payment.css
+++ b/src/views/Payment.css
@@ -16,12 +16,24 @@
     font-weight: 500;
 }
 
-.paymentWrapper .paymentTypes {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 10px;
+@media only screen and (min-width: 500px) {
+    .paymentWrapper .paymentTypes {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+        padding: 10px;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    .paymentWrapper .paymentTypes {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+        padding: 10px;
+    }
 }
 
 .paymentWrapper .paymentTypes img {
